I took the word 'pls' out of the head title.

--- a/dreams.html
+++ b/dreams.html
@@ -1,7 +1,7 @@
 <head>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>PLS GIVE ME DREAMS</title>
+	<title>GIVE ME DREAMS</title>
 
 </head>
 
