replaced your image with a better one :)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</nav>
 	</header>
 
-	<img height="200px" src="http://static1.1.sqspcdn.com/static/f/803157/22937082/1371586959153/dreams-road-sign.jpg?token=hT5UHu9aFnAPmD0WdFe3Z3DzWac%3D">
+	<img height="200px" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAFJAAAAJDRjMGVkMjIzLTFhNWItNGQyMS05OTNlLTYyZDc3OGZlZmQyOQ.jpg">
 	<h1>Carly Ayres</h1>
 
 	<p>I am a writer, thinker, human.</p>
